# NeEDL

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  doxyfile.in  install.py  vcpkg.json
.github/workflows/: docker-publish.yml
data/BIOGRID/: README.txt
data/COV_TEST/: EpiGEN_RND_COV.csv
data/dbSNP/: README.txt
data/e2e_tests/: annotations.csv  dummy_dataset.json  network.csv
docker/NeEDL/: Dockerfile
docker/realtime_scores/: Dockerfile  docker-compose.yml  example.env
ext/: CMakeLists.txt  boost_1_71_0.zip.ae
quepistasis/: .gitignore  Makefile  README.md  atos_device.py  azure_device.py  azure_qio_device.py  dwave_device.py  parallel_tempering.py  quantum_annealer.py  quantum_universal_computer.py  requirements.txt  utils.py
quepistasis/header/: cpu_sa.h  cpu_sa_wrapper.h  python_wrapper.h  snps_optimization.h
quepistasis/src/: cpu_sa.cpp  cpu_sa_wrapper.cpp  python_wrapper.cpp  snps_optimization.cpp
quepistasis/test/: test.cpp  test.py
run/: NeEDL.py  bash_install.sh  calculate_scores.py  convert_to_binary.py  epiJSON.py
shinyapp/: app.R  global.R
shinyapp/src/: create_task_stat.R  map_snps_to_genes.R  network.R  one_run_final.R  plot_centralities.R  plot_scores.R
src/: CMakeLists.txt
src/data_model/: DataModel.cpp  DataModel.hpp  SNPNetwork.cpp  SNPNetwork.hpp  SNPNetwork.ipp  SNPStorage.cpp  SNPStorage.hpp  SNPStorage.ipp  SNP_t.cpp  SNP_t.hpp  SNP_t_ext.cpp
src/jobs/: BioGridConnector.cpp  BioGridConnector.hpp  CreateRandomSets.cpp  CreateRandomSets.hpp  CreateSetKMers.cpp  CreateSetKMers.hpp  DbSNPAnnotator.cpp  DbSNPAnnotator.hpp  DebugSleep.cpp  DebugSleep.hpp  DiseaseSNPReader.cpp  DiseaseSNPReader.hpp  DummyErrorTask.cpp  DummyErrorTask.hpp  EQTLAnnotator.cpp  EQTLAnnotator.hpp  InstanceLoader.cpp  InstanceLoader.hpp  InstanceSaver.cpp  InstanceSaver.hpp  InternalBimLoader.cpp  InternalBimLoader.hpp  Job.cpp  Job.hpp  JointDegreeAnalyser.cpp  JointDegreeAnalyser.hpp  LocalSearch.cpp  LocalSearch.hpp  MAFFilter.cpp  MAFFilter.hpp  MMAFilter.cpp  MMAFilter.hpp  MultiNetworkAggregator.cpp  MultiNetworkAggregator.hpp  NetworkCsvConnector.cpp  NetworkCsvConnector.hpp  NetworkStatsPrinter.cpp  NetworkStatsPrinter.hpp  PlinkCollectDatasetStats.cpp  PlinkCollectDatasetStats.hpp  (+70 more)
src/model/: all_models.hpp  bayesian_model.cpp  bayesian_model.hpp  bayesian_model.ipp  epistasis_model.hpp  epistasis_model.ipp  instance.cpp  instance.hpp  instance.ipp  penetrance_model.cpp  penetrance_model.hpp  penetrance_model.ipp  regression_model.cpp  regression_model.hpp  regression_model.ipp  variance_model.cpp  variance_model.hpp  variance_model.ipp
src/pipelines/: HelperPipelines.cpp  HelperPipelines.hpp  NeEDLPipeline.cpp  NeEDLPipeline.hpp
src/util/: FileFinder.cpp  FileFinder.hpp  LDTester.cpp  LDTester.hpp  Logger.cpp  Logger.hpp  OutputDirectory.cpp  OutputDirectory.hpp  RepeaterList.hpp  TerminalTable.cpp  TerminalTable.hpp  TimeLogger.cpp  TimeLogger.hpp  csv_parser.cpp  csv_parser.hpp  helper_functions.cpp  helper_functions.hpp  misc.cpp  misc.hpp  progress_bar.cpp  progress_bar.hpp  types.cpp  types.hpp
test/: CMakeLists.txt
test/e2e/: test_container.sh
test/model/: CMakeLists.txt
test/model/src/: CMakeLists.txt  JSON_format.hpp  JSON_format.ipp  NeEDL.cpp  aggregate_BOOST.sh  aggregate_EpiGEN.sh  aggregate_MACOED.sh  aggregate_results.py  calculate_scores.cpp  combine_JSON_files.cpp  compare_models.cpp  convert_to_binary.cpp  create_LD_matrix.cpp  create_PoCos_input.cpp  epiJSON.cpp  realtime_scores.cpp  util.cpp  util.hpp
test/unit/: CMakeLists.txt
test/unit/src/: bayesian_model.cpp  catch_main.cpp  instance.cpp  penetrance_model.cpp  regression_model.cpp  variance_model.cpp
